# getsfattr

./: Cargo.toml  README.md  TODO.md
src/: main.rs
