[package]
name = "getsfattr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
xattr = "1.0.0"
