[package]
name = "getsfattr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
futures = "0.3.25"
rand = "0.8.5"
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
thiserror = "1.0.38"
tokio = { version = "1.23.0", features = ["sync", "fs", "macros", "rt-multi-thread"] }
xattr = "1.0.0"
